[package]
edition      = "2024"
name         = "firmware"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "firmware"
path = "./src/bin/main.rs"

[dependencies]
natnet   = { path = "../crates/natnet" }
frames   = { path = "../crates/frames" }
mavbridge  = { path = "../crates/mavbridge" }
portal = { path = "../crates/portal" }

heapless = { version = "0.9.3", default-features = false }

# For use settings persistence in the NVS flash partition.
esp-storage = { version = "0.9.0", features = ["esp32c6"] }
embedded-storage = "0.3.1"

# For portal and AP mode
edge-dhcp = "0.8.0"
edge-captive = "0.8.0"
edge-nal = { version = "0.7.0", default-features = false }
edge-nal-embassy = "0.9.0"

esp-hal = { version = "~1.1.0", features = ["esp32c6", "log-04", "unstable"] }

esp-rtos = { version = "0.3.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c6",
  "log-04",
] }

esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32c6", "log-04"] }
log                    = "0.4.27"

embassy-net = { version = "0.9.1", features = [
  "dhcpv4",
  "log",
  "medium-ethernet",
  "multicast",
  "tcp",
  "udp",
] }
embassy-sync = "0.8.0"
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
esp-alloc = "0.10.0"
esp-backtrace = { version = "0.19.0", features = [
  "esp32c6",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.17.0", features = ["esp32c6", "log-04"] }
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.10.0", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }
esp-radio = { version = "0.18.0", features = [
  "esp-alloc",
  "esp32c6",
  "log-04",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.13.0", default-features = false, features = [
  "log",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

critical-section = "1.2.0"
static_cell      = "2.1.1"


# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.dev.package.esp-storage]
opt-level = 3

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
